--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ file (GLOB
         "src/*.cpp"
 )
 
-add_executable(2023_Spring_I2PII_Mini_Project_2 ${TD_SRC})
+add_executable(2023_Spring_I2PII_Mini_Project_2 ${TD_SRC} include/SettingScene.hpp src/SettingScene.cpp include/DiceEnemy.hpp src/DiceEnemy.cpp include/MachineGun.hpp src/MachineGun.cpp src/FireBullet.cpp include/FireBullet.hpp src/ShootEffect.cpp include/ShootEffect.hpp include/DiceTwoEnemy.hpp src/DiceTwoEnemy.cpp)
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories("/usr/local/include")
 link_directories("/usr/local/lib")
